started working on my project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+    <div>
+        <nav>
+            <h1>Tani Kaye</h1>
+            <a href="#" class="home">home</a>
+            <a href="#" class="about">about</a>
+            <a href="#" class="contact">contact</a>
+            <a href="#" class="projects">projects</a>
+        </nav>
+    </div>
+    <section>
+       <div>
+           <img src="https://www.planetware.com/wpimages/2019/06/new-york-new-york-city-top-beaches-coney-island-beach.jpg" alt="beach" class="bigpic">
+       </div> 
+       <div>
+           <h2>
+               Tani Kaye
+           </h2>
+           <a href="#" class="myprojects"></a>
+           <p>this is a paragraph</p>
+       </div>
+       <div>
+           <img src="" alt="" class="a">
+           <img src="" alt="" class="b">
+           <img src="" alt="" class="c">
+           <img src="" alt="" class="d">
+           <img src="" alt="" class="e">
+           <img src="" alt="" class="f">
+           <img src="" alt="" class="g">
+           <img src="" alt="" class="h">
+       </div>
+    </section>
+    <footer>
+        <div>
+            <h2>
+                Like What You See?
+            </h2>
+            <a href="#" class="callme">contact me</a>
+        </div>
+    </footer>
 </body>
 </html>
