made some ore changes

--- a/index.html
+++ b/index.html
@@ -9,33 +9,39 @@
 <body>
     <div>
         <nav>
-            <h1>Tani Kaye</h1>
-            <a href="#" class="home">home</a>
-            <a href="#" class="about">about</a>
-            <a href="#" class="contact">contact</a>
-            <a href="#" class="projects">projects</a>
+            <div>
+                <h1>Tani Kaye</h1>
+            </div>
+            <div class ="links">
+             <a href="#" class="home">home</a>
+             <a href="#" class="about">about</a>
+             <a href="#" class="contact">contact</a>
+             <a href="#" class="projects">projects</a>
+            </div> 
         </nav>
     </div>
-    <section>
+    <section class ="container">
        <div>
-           <img src="https://www.planetware.com/wpimages/2019/06/new-york-new-york-city-top-beaches-coney-island-beach.jpg" alt="beach" class="bigpic">
+           <img class ="biggerpic" src="https://www.planetware.com/wpimages/2019/06/new-york-new-york-city-top-beaches-coney-island-beach.jpg" alt="beach" class="bigpic">
        </div> 
-       <div>
+       <div class ="words">
            <h2>
                Tani Kaye
            </h2>
-           <a href="#" class="myprojects"></a>
+           <a href="#" class="myprojects">my projects</a>
            <p>this is a paragraph</p>
        </div>
-       <div>
-           <img src="" alt="" class="a">
-           <img src="" alt="" class="b">
-           <img src="" alt="" class="c">
-           <img src="" alt="" class="d">
-           <img src="" alt="" class="e">
-           <img src="" alt="" class="f">
-           <img src="" alt="" class="g">
-           <img src="" alt="" class="h">
+    </section>
+    <section class ="photoflex">
+       <div class ="littlepics">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="a">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="b">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="c">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="d">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="e">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="f">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="g">
+           <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="h">
        </div>
     </section>
     <footer>
