--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
            <img src="https://www.mindtools.com/media/Resized-Images/Articles/Stress_Management/26_GI_611868910_artisteer_2x1.jpg" alt="" class="h">
        </div>
     </section>
-    <footer>
+    <footer class ="ending">
         <div>
             <h2>
                 Like What You See?
             </h2>
-            <a href="#" class="callme">contact me</a>
+            <div><h2><a href="#" class="callme">contact me</a></h2></div>
         </div>
     </footer>
 </body>
