made some more changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div>
                 <h1>Tani Kaye</h1>
-            </div>
+            </div class="linker">
             <div class ="links">
              <a href="#" class="home">home</a>
              <a href="#" class="about">about</a>
@@ -29,7 +29,7 @@
                Tani Kaye
            </h2>
            <a href="#" class="myprojects">my projects</a>
-           <p>this is a paragraph</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet possimus quis aliquam nostrum quidem error eaque sint. Architecto, corporis. Nemo molestiae quisquam veniam voluptate voluptas recusandae rerum blanditiis sunt et.</p>
        </div>
     </section>
     <section class ="photoflex">
